@@ -32,12 +32,11 @@ import com.iab.openrtb.request.Uid;
 import com.iab.openrtb.request.User;
 import com.iab.openrtb.request.Video;
 import com.iab.openrtb.request.VideoObject;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.BidderCatalog;
 import org.prebid.server.metric.MetricName;
@@ -68,6 +67,7 @@ import java.math.BigDecimal;
 import java.util.Collections;
 import java.util.EnumMap;
 import java.util.LinkedHashSet;
+import java.util.Map;
 import java.util.function.UnaryOperator;
 
 import static java.util.Arrays.asList;
@@ -80,25 +80,24 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mock.Strictness.LENIENT;
 import static org.mockito.Mockito.verify;
 
+@ExtendWith(MockitoExtension.class)
 public class RequestValidatorTest extends VertxTest {
 
     private static final String RUBICON = "rubicon";
 
-    @Rule
-    public final MockitoRule mockitoRule = MockitoJUnit.rule();
-
-    @Mock
+    @Mock(strictness = LENIENT)
     private BidderCatalog bidderCatalog;
-    @Mock
+    @Mock(strictness = LENIENT)
     private BidderParamValidator bidderParamValidator;
     @Mock
     private Metrics metrics;
 
     private RequestValidator target;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         given(bidderParamValidator.validate(any(), any())).willReturn(Collections.emptySet());
         given(bidderCatalog.isValidName(eq(RUBICON))).willReturn(true);
@@ -1365,7 +1364,7 @@ public class RequestValidatorTest extends VertxTest {
         // given
         final ObjectNode prebid = mapper.valueToTree(ExtImpPrebid.builder()
                 .storedBidResponse(singletonList(ExtStoredBidResponse.of("bidder", "id")))
-                .storedAuctionResponse(ExtStoredAuctionResponse.of("id"))
+                .storedAuctionResponse(ExtStoredAuctionResponse.of("id", null))
                 .build());
 
         final BidRequest bidRequest = validBidRequestBuilder()
@@ -1484,6 +1483,46 @@ public class RequestValidatorTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).isEmpty();
+    }
+
+    @Test
+    public void validateShouldReturnValidationMessageWhenExtImpPrebidHasStoredAuctionResponseWithoutId() {
+        // given
+        final BidRequest bidRequest = validBidRequestBuilder()
+                .imp(singletonList(validImpBuilder()
+                        .ext(mapper.valueToTree(singletonMap("prebid", singletonMap(
+                                "storedauctionresponse", mapper.createObjectNode())))).build()))
+                .build();
+
+        // when
+        final ValidationResult result = target.validate(bidRequest, null);
+
+        // then
+        assertThat(result.getErrors())
+                .containsOnly("request.imp[0].ext.prebid.storedauctionresponse.id should be defined");
+        assertThat(result.getWarnings()).isEmpty();
+    }
+
+    @Test
+    public void validateShouldReturnWarningMessageWhenExtImpPrebidHasStoredAuctionResponseSeatBidArr() {
+        // given
+        final BidRequest bidRequest = validBidRequestBuilder()
+                .imp(singletonList(validImpBuilder()
+                        .ext(mapper.valueToTree(singletonMap("prebid", Map.of(
+                                "storedauctionresponse", mapper.createObjectNode()
+                                        .put("id", "1")
+                                        .set("seatbidarr", mapper.createArrayNode())))
+                        )).build()))
+                .build();
+
+        // when
+        final ValidationResult result = target.validate(bidRequest, null);
+
+        // then
+        assertThat(result.getErrors()).isEmpty();
+        assertThat(result.getWarnings())
+                .containsOnly("WARNING: request.imp[0].ext.prebid.storedauctionresponse.seatbidarr "
+                        + "is not supported at the imp level");
     }
 
     @Test
@@ -3202,7 +3241,7 @@ public class RequestValidatorTest extends VertxTest {
 
     private static BidRequest overwriteBannerFormatInFirstImp(
             BidRequest bidRequest, UnaryOperator<FormatBuilder> formatModifier) {
-        final Banner banner = bidRequest.getImp().get(0).getBanner().toBuilder()
+        final Banner banner = bidRequest.getImp().getFirst().getBanner().toBuilder()
                 .format(singletonList(formatModifier.apply(Format.builder()).build())).build();
 
         return bidRequest.toBuilder().imp(singletonList(validImpBuilder().banner(banner).build())).build();
@@ -3210,7 +3249,7 @@ public class RequestValidatorTest extends VertxTest {
 
     private static BidRequest overwritePmpFirstDealInFirstImp(
             BidRequest bidRequest, UnaryOperator<DealBuilder> dealModifier) {
-        final Pmp pmp = bidRequest.getImp().get(0).getPmp().toBuilder()
+        final Pmp pmp = bidRequest.getImp().getFirst().getPmp().toBuilder()
                 .deals(singletonList(dealModifier.apply(dealModifier.apply(Deal.builder())).build())).build();
 
         return bidRequest.toBuilder().imp(singletonList(validImpBuilder().pmp(pmp).build())).build();
